--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,13 +12,17 @@
         android:theme="@style/Theme.Mtp11"
         tools:targetApi="31">
         <activity
+            android:name=".MainActivity"
+            android:exported="true" />
+        <activity
             android:name=".listarpr"
             android:exported="false" />
         <activity
             android:name=".InsertarRegistro"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+
+            android:name=".login"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
