--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -16,6 +15,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mtp11"
         tools:targetApi="31">
+        <activity
+            android:name=".minicio2"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -24,7 +26,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/file_paths"/>
+                android:resource="@xml/file_paths" />
         </provider>
 
         <activity
@@ -37,7 +39,6 @@
             android:name=".InsertarRegistro"
             android:exported="false" />
         <activity
-
             android:name=".login"
             android:exported="true">
             <intent-filter>
