--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -15,9 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mtp11"
         tools:targetApi="31">
-        <activity
-            android:name=".minicio2"
-            android:exported="false" />
+
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -38,6 +37,11 @@
         <activity
             android:name=".InsertarRegistro"
             android:exported="false" />
+
+        <activity
+            android:name=".minicio2"
+            android:exported="false" />
+
         <activity
             android:name=".login"
             android:exported="true">
