--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,25 @@ dependencies {
     implementation 'org.apache.poi:poi-ooxml:5.1.0'
     implementation 'com.google.android.gms:play-services-location:18.0.0'
     implementation 'com.google.firebase:firebase-functions:16.0.0'
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
+    implementation 'com.google.firebase:firebase-firestore:23.0.4'
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.25.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-drive:19.0.0'
+
+    implementation 'com.google.android.gms:play-services-drive:19.0.0'
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.23.0'
+
+    implementation 'com.google.api-client:google-api-client-android:1.30.9'
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev581-1.30.9'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.30.9'
+    implementation 'com.google.http-client:google-http-client-gson:1.39.2'
+    implementation 'com.google.api-client:google-api-client-gson:1.30.9'
+
+    implementation 'com.google.api-client:google-api-client:1.31.3'
+    implementation 'com.google.oauth-client:google-oauth-client-jetty:1.31.3'
+    implementation 'com.google.apis:google-api-services-sheets:v4-rev558-1.25.0'
+
 
 
 
