--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ allprojects {
     repositories {
         // Make sure that you have the following two repositories
         google()  // Google's Maven repository
-
+        jcenter()
         mavenCentral()  // Maven Central repository
 
     }
