--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,6 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
-
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -23,7 +21,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mtp11"
         tools:targetApi="31">
-
+        <activity
+            android:name=".mapamtp"
+            android:exported="false" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -44,11 +44,9 @@
         <activity
             android:name=".InsertarRegistro"
             android:exported="false" />
-
         <activity
             android:name=".minicio2"
             android:exported="false" />
-
         <activity
             android:name=".login"
             android:exported="true">
