--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         android:theme="@style/Theme.Mtp11"
         tools:targetApi="31">
         <activity
+            android:name=".ubicacionmacti"
+            android:exported="false" />
+        <activity
             android:name=".mapamtp"
             android:exported="false" />
 
