--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,11 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -21,6 +26,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mtp11"
         tools:targetApi="31">
+
+    <meta-data
+        android:name="com.google.android.geo.API_KEY"
+        android:value="AIzaSyD7j8COpcQgTN1S6B2Hih8ceQSKcrAlV14" />
+        <!--android:value="AIzaSyAmyHjgi9IVHPEnlSUjjGVNkocRc03xFOw" />-->
+
         <activity
             android:name=".ubicacionmacti"
             android:exported="false" />
@@ -53,6 +64,11 @@
         <activity
             android:name=".login"
             android:exported="true">
+
+                <!--android:value="AIzaSyD7j8COpcQgTN1S6B2Hih8ceQSKcrAlV14" />-->
+
+
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
