--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,11 +11,8 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-
 
     <application
         android:allowBackup="true"
@@ -26,12 +23,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Mtp11"
         tools:targetApi="31">
+        <activity
+            android:name=".insertregistro2update"
+            android:exported="false" />
 
-    <meta-data
-        android:name="com.google.android.geo.API_KEY"
-        android:value="AIzaSyD7j8COpcQgTN1S6B2Hih8ceQSKcrAlV14" />
-        <!--android:value="AIzaSyAmyHjgi9IVHPEnlSUjjGVNkocRc03xFOw" />-->
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyD7j8COpcQgTN1S6B2Hih8ceQSKcrAlV14" /> <!-- android:value="AIzaSyAmyHjgi9IVHPEnlSUjjGVNkocRc03xFOw" /> -->
         <activity
             android:name=".ubicacionmacti"
             android:exported="false" />
@@ -65,9 +63,7 @@
             android:name=".login"
             android:exported="true">
 
-                <!--android:value="AIzaSyD7j8COpcQgTN1S6B2Hih8ceQSKcrAlV14" />-->
-
-
+            <!-- android:value="AIzaSyD7j8COpcQgTN1S6B2Hih8ceQSKcrAlV14" /> -->
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
